# adw-gtk3

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Makefile  PKGBUILD  README.md  build_variants.sh  customizing.md  gitpush.sh  gtk4.md  meson.build  meson_options.txt
.github/ISSUE_TEMPLATE/: template.md  template.yml
.github/scripts/: sync-fork.sh
.github/workflows/: create-release.yml  release.yml  sync-fork.yml  update-gtk4-theme.yml
debian/: control.in
gtk/src/: index.theme.in  meson.build
gtk/src/adw-gtk3/: meson.build
gtk/src/adw-gtk3-dark/: meson.build
gtk/src/adw-gtk3-dark/gtk-2.0/: gtkrc  hacks-dark.rc  hacks.rc
gtk/src/adw-gtk3-dark/gtk-3.0/: install-dark-theme.sh  meson.build
gtk/src/adw-gtk3-dark/gtk-4.0/: gtk-dark.css  gtk.css  install-gtk4-dark.sh  meson.build
gtk/src/adw-gtk3/gtk-2.0/: apps.rc  gtkrc  main.rc
gtk/src/adw-gtk3/gtk-3.0/: _apps.scss  _colors-public.scss  _colors.scss  _common.scss  _custom.scss  _defaults.scss  _drawing.scss  _functions.scss  _granite.scss  _libhandy.scss  _palette.scss  _phosh.scss  assets.txt  gtk-dark-hc.scss  gtk-dark.css  gtk-dark.scss  gtk-hc.scss  gtk.css  gtk.scss  libadwaita-tweaks.css  libadwaita.css  meson.build  parse-sass.sh  render-assets.sh
gtk/src/adw-gtk3/gtk-4.0/: gtk-dark.css  gtk.css  meson.build
scripts/: parse-sass.sh  render-assets.sh
snap/: snapcraft.yaml
src/: README.md  assets.txt  meson.build
src/sass/: _apps.scss  _colors-public.scss  _colors.scss  _common.scss  _defaults.scss  _drawing.scss  _functions.scss  _libgranite.scss  _libhandy.scss  _modules.scss  _palette.scss  _settings.scss  gtk-dark.scss  gtk.scss
src/sass/gtk4/: _settings.scss  libadwaita-tweaks.scss  theme-dark.scss  theme-light.scss
src/sass/widgets/: _app-notification.scss  _buttons.scss  _calendar.scss  _checks.scss  _color-chooser.scss  _combo-box.scss  _entries.scss  _expander.scss  _file-chooser.scss  _frame.scss  _header-bar.scss  _info-bar.scss  _labels.scss  _level-bar.scss  _links.scss  _lists.scss  _menus.scss  _message-dialog.scss  _misc.scss  _notebook.scss  _paned.scss  _pathbar.scss  _popovers.scss  _print-dialog.scss  _progress-bar.scss  _scale.scss  _scrolling.scss  _sidebars.scss  _spin-button.scss  _spinner.scss  _switch.scss  _toolbars.scss  _tooltip.scss  _treeviews.scss  _views.scss  _window.scss
src/theme-dark/: meson.build
src/theme-dark/gtk4/: gtk-dark.css  libadwaita.css
src/theme-light/: meson.build
src/theme-light/gtk4/: gtk-dark.css  gtk.css  libadwaita.css
